samples/_failures_safe/1761553751_9a7741_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_223e23e9.c: In function ‘main’:
./samples/SAFE/__tmp_223e23e9.c:159:5: error: expected expression at end of input
  159 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_223e23e9.c:159:5: error: expected declaration or statement at end of input
